--- a/LearningSpring/SpringInAction/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/LearningSpring/SpringInAction/taco-cloud/src/main/resources/templates/orderForm.html
@@ -6,7 +6,7 @@ xmlns:th="http://www.thymeleaf.org">
   <link rel="stylesheet" th:href="@{/styles.css}" />
 </head>
 <body>
-  <form method="POST" th:action="@{/orders}" th:object="${tacoOrder}">
+  <form method="POST" th:action="@{/order}" th:object="${tacoOrder}">
     <h1>Order your taco creations!</h1>
     <h3>Your tacos in this order:</h3>
     <a th:href="@{/design}" id="another">Design another taco</a><br/>
@@ -33,6 +33,9 @@ xmlns:th="http://www.thymeleaf.org">
       <h3>Here's how I'll pay...</h3>
       <label for="ccNumber">Credit Card #: </label>
       <input type="text" th:field="*{ccNumber}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">CC Num Error</span>
       <br/>
       <label for="ccExpiration">Expiration: </label>
       <input type="text" th:field="*{ccExpiration}"/>
